--- a/client/src/app/login-sing-in/login-sing-in.component.html
+++ b/client/src/app/login-sing-in/login-sing-in.component.html
@@ -1,34 +1,38 @@
-<div class="container">
 
-<div class="row" style="margin-top:20px">
-    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-		<form role="form">
-			<fieldset>
-				<h2>Please Sign In</h2>
-				<hr class="colorgraph">
-				<div class="form-group">
-                    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
-				</div>
-				<div class="form-group">
-                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
-				</div>
-				<span class="button-checkbox">
-					<button type="button" class="btn" data-color="info">Remember Me</button>
-                    <input type="checkbox" name="remember_me" id="remember_me" checked="checked" class="hidden">
-					<a href="" class="btn btn-link pull-right">Forgot Password?</a>
-				</span>
-				<hr class="colorgraph">
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6">
-                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Sign In">
-					</div>
-					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a href="" class="btn btn-lg btn-primary btn-block">Register</a>
-					</div>
-				</div>
-			</fieldset>
-		</form>
-	</div>
-</div>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container-background">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-5 col-md-3">
+        <div class="form-login">
+          <form *ngIf="!user">
+            <h4>RACEAPP</h4>
+            <h5>Name</h5>
+            <input type="text" class="form-control input-sm chat-input" [(ngModel)]="formInfo.name" name="name" />
+            <br>
+            <h5>Password</h5>
+            <input type="password" class="form-control input-sm chat-input" [(ngModel)]="formInfo.password" name="password" />
+            <br>
+            <div class="wrapper">
+              <span class="btn btn-primary">
+              <button (click)="login()"> login </button>
+            </span>
+            </div>
+          </form>
+          <div *ngIf="user">
+            <h2> You are now logged in as {{ user.name }}!! </h2>
+            <p> Here's the user object </p>
+            <pre> {{ user | json }} </pre>
 
+            <p *ngIf="privateData"> Here's some data fetched from a protected API </p>
+            <pre> {{ privateData | json }} </pre>
+            <button (click)="logout()"> logout </button>
+            <button (click)="getPrivateData()"> Get private data </button>
+          </div>
+
+          <p class="error"> {{ error }} </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
