--- a/client/src/app/single-page/single-page.component.html
+++ b/client/src/app/single-page/single-page.component.html
@@ -12,11 +12,11 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a [routerLink]="['/signin']" class="btn btn-default btn-lg"><span class="network-name">Log in</span></a>
+                                <a [routerLink]="['/login']" class="btn btn-default btn-lg"><span class="network-name">Log in</span></a>
                             </li>
 
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Sign in</span></a>
+                                <a [routerLink]="['/signup']" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Sign in</span></a>
                             </li>
                         </ul>
                     </div>
