--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
                 </div>
 
                 <div class="media-body">
-                    <h5>User Info</h5>
+                    <h4><strong>User Info</strong></h4>
                     <p>{{user.name}}</p>
                     <p>{{user.lastName}}</p>
                     <p>{{user.email}}</p>
