--- a/client/src/app/list-event/list-event.component.html
+++ b/client/src/app/list-event/list-event.component.html
@@ -1,23 +1,22 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 info-profile">
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <span>
-        <h1 class="panel-title pull-left" style="font-size:30px;">John Doe <small>example@pods.tld</small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
-        <div class="dropdown pull-right">
-        </div>
-        </span>
-      <br>
-      <br>
-      <hr>
-      <span class="pull-left">
-                <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-files-o" aria-hidden="true"></i> Inscribed Competition</a>
-                <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Competition Complete <span class="badge">42</span></a>
-      <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Contacts <span class="badge">42</span></a>
-      <span class="pull-rigth edit-log-out">
-                  <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-files-o" aria-hidden="true"></i> Edit Profile</a>
-                  <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-files-o" aria-hidden="true"></i> Log out</a>
-                </span>
-      </span>
-    </div>
-  </div>
-</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p *ngFor='let event of events'>
+  <span>title: {{event.name}}</span><br>
+  <span>Date: {{event.eventWeb}}</span>
+</p>
