--- a/client/src/app/edit-profile/edit-profile.component.html
+++ b/client/src/app/edit-profile/edit-profile.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-<form class="form-horizontal">
+<div class="container edit" >
+<form class="form-horizontal"  *ngIf= "user">
 <fieldset>
 
 <!-- Form Name -->
@@ -8,7 +8,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="textinput">name</label>
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="name" class="form-control input-md">
+  <input id="textinput" name="name" [(ngModel)]="editInfo.name" type="text" placeholder= {{user.name}} class="form-control input-md">
 
   </div>
 </div>
@@ -17,152 +17,34 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="textinput">last name</label>
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="last name" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- File Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="filebutton">photo</label>
-  <div class="col-md-4">
-    <input id="filebutton" name="filebutton" class="input-file" type="file">
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">birthday</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="birthday" class="form-control input-md">
+  <input id="textinput" name="lastName" [(ngModel)]="editInfo.lastname" type="text" placeholder= {{user.lastName}} class="form-control input-md">
 
   </div>
 </div>
 
 <!-- Text input-->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">father name</label>
+  <label class="col-md-4 control-label" for="textinput">email</label>
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="father name" class="form-control input-md">
+  <input id="textinput" name="email" [(ngModel)]="editInfo.email" type="text" placeholder= {{user.email}} class="form-control input-md">
 
   </div>
 </div>
 
 <!-- Text input-->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">SSN number</label>
+  <label class="col-md-4 control-label" for="textinput">town</label>
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="SSN number" class="form-control input-md">
-
+  <input id="textinput" name="textinput" type="text" placeholder= {{user.town}} class="form-control input-md">
   </div>
 </div>
 
-<!-- File Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="filebutton">Documents image</label>
-  <div class="col-md-4">
-    <input id="filebutton" name="filebutton" class="input-file" type="file">
-  </div>
-</div>
 
 <!-- Text input-->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">education grade</label>
+  <label class="col-md-4 control-label" for="textinput">club</label>
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="education grade" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">department</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="department" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Representative's Job title</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="title" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">contact email address</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="contact email address" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">phone</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="phone" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Fax</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Skype ID</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="Skype ID" class="form-control input-md">
-
-  </div>
-</div>
-
-<!-- Select Basic -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="selectbasic">Country</label>
-  <div class="col-md-4">
-    <select id="selectbasic" name="selectbasic" class="form-control">
-      <option value="1">Iran</option>
-      <option value="2">USA</option>
-    </select>
-  </div>
-</div>
-
-<!-- Select Basic -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="selectbasic">gender</label>
-  <div class="col-md-4">
-    <select id="selectbasic" name="selectbasic" class="form-control">
-      <option value="1">Male</option>
-      <option value="2">Female</option>
-    </select>
-  </div>
-</div>
-
-<!-- Textarea -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textarea">Address</label>
-  <div class="col-md-4">
-    <textarea class="form-control" id="textarea" name="textarea">address</textarea>
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">website</label>
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="website" class="form-control input-md">
+  <input id="textinput" name="textinput" type="text" placeholder= {{user.club}} class="form-control input-md">
 
   </div>
 </div>
@@ -171,7 +53,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="singlebutton"></label>
   <div class="col-md-4">
-    <button id="singlebutton" name="singlebutton" class="btn btn-primary">submit</button>
+    <button id="singlebutton" (click)="saveUser()" name="singlebutton" class="btn btn-primary">submit</button>
   </div>
 </div>
 
