--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -9,12 +9,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand image" [routerLink]="['home']"> <img src="../../../assets/Logo.png"></a>
+                <a class="navbar-brand image" [routerLink]="['']"> <img src="../../../assets/Logo.png"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
