--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="mainbody container-fluid">
+<div class="mainbody container-fluid home" >
     <div class="row">
         <div style="padding-top:50px;"> </div>
         <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
