--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,33 +1,48 @@
 <div class="col-lg-3 col-md-3 hidden-sm hidden-xs profile">
     <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="media" *ngIf= "user">
+        <div class="panel-body" *ngIf= "user">
+            <div class="media">
                 <div align="center">
                     <img class="thumbnail img-responsive" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="200px" height="200px">
                 </div>
-
-                <div class="media-body">
+                <div class="media-body" *ngIf="user.role==='USER'">
                     <h4><strong>User Info</strong></h4>
                     <p>{{user.name}}</p>
                     <p>{{user.lastName}}</p>
                     <p>{{user.email}}</p>
                     <p>{{user.town}}</p>
                     <p>{{user.club}}</p>
-                    <p>{{user.role}}</p>
                     <br>
-                    <p><a href="#">Edit Profile</a></p>
-                    <p><a href="#">Log out</a></p>
                     <hr>
                     <h5><strong>Events</strong></h5>
-                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Search Competion </a></p>
+                    <p><a [routerLink]="['/home/list-events']" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true" ></i> Search Competion </a></p>
                     <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Competition Complete <span class="badge">42</span></a></p>
                     <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Inscribed Competition <span class="badge">42</span></a></p>
                     <hr>
-                    <h5><strong>Birthday</strong></h5>
-                    <p>January 01 1901</p>
+                    <h5><strong>Profile</strong></h5>
+                    <p><a [routerLink]="['/home/edit-profile']">Edit Profile</a></p>
+                    <p><button (click)="logout()"> logout </button></p>
+                </div>
+                <div class="media-body" *ngIf="user.role==='ADMIN'">
+                    <h4><strong>Admin Info</strong></h4>
+                    <p>{{user.name}}</p>
+                    <p>{{user.lastName}}</p>
+                    <p>{{user.email}}</p>
+                    <p>{{user.town}}</p>
+                    <p>{{user.club}}</p>
+                    <br>
+                    <hr>
+                    <h5><strong>Events</strong></h5>
+                    <p><a [routerLink]="['/home/create-event']" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true" ></i> Create Event </a></p>
+                    <p><a [routerLink]="['/home/create-events']" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> My events <span class="badge">42</span></a></p>
+                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Delete Event <span class="badge">42</span></a></p>
+                    <hr>
+                    <h5><strong>Profile</strong></h5>
+                    <p><a [routerLink]="['/home/edit-profile']">Edit Profile</a></p>
+                    <p><button (click)="logout()"> logout </button></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<app-info-profile></app-info-profile>
+<router-outlet></router-outlet>
