--- a/client/src/app/sign-in/sign-in.component.html
+++ b/client/src/app/sign-in/sign-in.component.html
@@ -12,6 +12,12 @@
             <h5>Password</h5>
             <input type="password" class="form-control input-sm chat-input" [(ngModel)]="formInfo.password" name="password" />
             <br>
+            <label class="switch" id="switch">
+            <input type="checkbox" name="check" [(ngModel)]="formInfo.check"> Are you a race organizer?
+            <br>
+
+            <div class="slider round"></div>
+            </label>
             <div class="wrapper">
               <span class="btn btn-primary">
               <button (click)="signup()"> login </button>
