--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -16,8 +16,8 @@
                     <hr>
                     <h5><strong>Events</strong></h5>
                     <p><a [routerLink]="['/home/list-events']" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true" ></i> Search Competion </a></p>
-                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Competition Complete <span class="badge">42</span></a></p>
-                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Inscribed Competition <span class="badge">42</span></a></p>
+                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Competition Complete</a></p>
+                    <p><a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Inscribed Competition</a></p>
                     <hr>
                     <h5><strong>Profile</strong></h5>
                     <p><a [routerLink]="['/home/edit-profile']">Edit Profile</a></p>
