--- a/client/src/app/event-info/event-info.component.html
+++ b/client/src/app/event-info/event-info.component.html
@@ -1,11 +1,11 @@
-<div class="container event-info">
+<div class="container event-info" *ngIf= "user">
     <div class="row" *ngIf="event">
       <div class="col-md-9">
           <div>
               <div class="panel panel-default">
                   <div class="text-center header">{{event.name}}</div>
                   <div class="panel-body text-center">
-
+                    asdasd
                   </div>
               </div>
           </div>
@@ -13,17 +13,12 @@
       <div class="col-md-5">
           <div>
               <div class="panel panel-default">
-                  <div class="text-center header">Google MAPS Api-> maps Box</div>
+                  <div class="text-center header">Google MAPS</div>
                   <div class="panel-body text-center">
-                      <h4>Address</h4>
-                      <div>
-                      2217 Washington Blvd<br />
-                      Washington DC<br />
-                      #(703) 1234 1234<br />
-                      service@company.com<br />
-                      </div>
-                      <hr />
-                      <div id="map1" class="map">
+                      <h4>{{user._id}}</h4>
+                      <div id="map">
+
+
                       </div>
                   </div>
               </div>
@@ -34,7 +29,9 @@
                 <div class="panel panel-default">
                     <div class="text-center header">Google MAPS Api-> slope Box</div>
                     <div class="panel-body text-center">
-                        <h4>Address</h4>
+
+
+                          <h4>Address</h4>
                         <div>
                         2217 Washington Blvd<br />
                         Washington DC<br />
@@ -42,8 +39,8 @@
                         service@company.com<br />
                         </div>
                         <hr />
-                        <div id="map1" class="map">
-                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -53,6 +50,7 @@
                 <div class="panel panel-default">
                     <div class="text-center header"> Event info Box</div>
                     <div class="panel-body text-center">
+
                         <h4>Address</h4>
                         <div>
                         2217 Washington Blvd<br />
@@ -60,6 +58,7 @@
                         #(703) 1234 1234<br />
                         service@company.com<br />
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -81,4 +80,10 @@
             </div>
         </div>
     </div>
+    <div class="panel panel-default">
+        <div class="text-center header">
+        <button type="button" name="button">Inscribirser</button>
+        </div>
+    </div>
+
 </div>
