--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -3,15 +3,15 @@
         <div class="panel-body" *ngIf= "user">
             <div class="media">
                 <div align="center">
-                    <img class="thumbnail img-responsive" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="200px" height="200px">
+                    <img class="thumbnail img-responsive" src="http://www.bradanovic.cl/capone.gif" width="200px" height="200px">
                 </div>
                 <div class="media-body" *ngIf="user.role==='USER'">
-                    <h4><strong>User Info</strong></h4>
-                    <p>{{user.name}}</p>
-                    <p>{{user.lastName}}</p>
-                    <p>{{user.email}}</p>
-                    <p>{{user.town}}</p>
-                    <p>{{user.club}}</p>
+                  
+                    <p><strong>{{user.name}}</strong></p>
+                    <p><strong>{{user.lastName}}</strong></p>
+                    <p><strong>{{user.email}}</strong></p>
+                    <p><strong>{{user.town}}</strong></p>
+                    <p><strong>{{user.club}}</strong></p>
                     <br>
                     <hr>
                     <h5><strong>Events</strong></h5>
