--- a/client/src/app/event-info/event-info.component.css
+++ b/client/src/app/event-info/event-info.component.css
@@ -1,5 +1,6 @@
 .event-info{
-    padding-top: 6%;
+
+    padding-left:20%;
 }
 sebm-google-map{
   height: 250px;
@@ -10,6 +11,13 @@ sebm-google-map{
   width: 430px;
 }
 #map{
+  height: 300px;
+  width: 430px;
+}
+#pie_chart{
   height: 250px;
   width: 430px;
+}
+.slope{
+  right: 20%;
 }
