--- a/client/src/app/event-info/event-info.component.html
+++ b/client/src/app/event-info/event-info.component.html
@@ -1,3 +1,4 @@
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN9OdByHcEHDc-fwHvjNsvh6XKKDvrciY" async defer></script>
 <div class="container event-info" *ngIf= "user">
     <div class="row" *ngIf="event">
@@ -24,8 +25,9 @@
         <div class="col-md-4">
             <div>
                 <div class="panel panel-default">
-                    <div class="text-center header">Google MAPS Api-> slope Box</div>
+                    <div class="text-center header slope">Google MAPS Api-> slope Box</div>
                     <div class="panel-body text-center" id=curve_chart>
+                      <div id="pie_chart" [chartData]="pie_ChartData" [chartOptions] = "pie_ChartOptions" chartType="PieChart" GoogleChart></div>
                     </div>
                 </div>
             </div>
