--- a/client/src/app/list-event/list-event.component.css
+++ b/client/src/app/list-event/list-event.component.css
@@ -95,7 +95,7 @@ background-color: #ECF0F1;
 	width: 85%;
 	height: 220px;
 	border-radius: 5px;
-  background-color:#0D7377;
+  background-color:#ECF0F1;
 }
 .card .cover{
     height: 105px;
