--- a/client/src/app/event-info/event-info.component.html
+++ b/client/src/app/event-info/event-info.component.html
@@ -2,70 +2,60 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN9OdByHcEHDc-fwHvjNsvh6XKKDvrciY" async defer></script>
 <div class="container event-info" *ngIf= "user">
-    <div class="row" *ngIf="event">
-      <div class="col-md-9">
-          <div>
-              <div class="panel panel-default">
-                  <div class="text-center header">{{event.name}}</div>
-                  <div class="panel-body text-center">
-                    asdasd
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-5">
+    <div class="row event" *ngIf="event" >
+
+      <div class="col-md-8">
           <div>
               <div class="panel panel-default">
                   <div class="text-center header"></div>
                   <div class="panel-body text-center" id="map">
-
                   </div>
               </div>
           </div>
       </div>
-        <div class="col-md-7">
-            <div>
-                <div class="panel panel-default slope">
-                    <div class="panel-body text-center">
-                    <google-chart [data]="lineChartOptions"></google-chart>
-                </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div>
-                <div class="panel panel-default">
 
-                    <div class="panel-body text-center">
-                      <h4>{{event.name}}</h4>
-                      <div>
-                      {{event.name}}<br />
-                    {{event.eventAdress}}<br />
-                      {{event.inscribed}}<br />
-                      {{km}} KM<br />
-                      </div>
-
+      <div class="col-md-4">
+          <div>
+              <div class="panel panel-default race-event">
+                  <div class="panel-body text-center">
+                    <h4>{{event.name}}</h4>
+                    <div>
+                    {{event.name}}<br />
+                  {{event.eventAdress}}<br />
+                    {{event.inscribed}}<br />
+                    {{km}} KM<br />
                     </div>
-                </div>
-            </div>
-        </div>
+                  </div>
+              </div>
+          </div>
+      </div>
         <div class="col-md-4">
             <div>
-                <div class="panel panel-default">
+                <div class="panel panel-default inscribed">
                     <div class="text-center header">List inscribed user</div>
                     <div class="panel-body text-center">
                         <h4>Address</h4>
-                        <div>
-                        2217 Washington Blvd<br />
-                        Washington DC<br />
-                        #(703) 1234 1234<br />
-                        service@company.com<br />
-                        </div>
+                    </div>
+                    <div class="text-center header">LETS GO</div>
+                    <div class="panel-body text-center">
+                        <button type="button" name="button" clas="btn btn-primary">Register</button>
+                        <label></label>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+<div class="row" >
+    <div class="col-md-12">
+        <div>
+            <div class="panel panel-default slope">
+                <div class="panel-body text-center" class="chart">
+                <google-chart [data]="lineChartOptions"></google-chart>
+            </div>
+            </div>
+        </div>
+    </div>
 
+</div>
 </div>
