--- a/client/src/app/list-event/list-event.component.css
+++ b/client/src/app/list-event/list-event.component.css
@@ -1,11 +1,12 @@
 body{
 background-color: #ECF0F1;
 }
-.events{
+.cards{
+  padding-top: 7%;
+}
 
-  }
-.event-Card{
-
+.event-name{
+padding-bottom: 1%;
 }
 
 .btn:hover,
