--- a/client/src/app/create-event/create-event.component.html
+++ b/client/src/app/create-event/create-event.component.html
@@ -3,14 +3,16 @@
   <div class="row">
     <!-- edit form column -->
     <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
-      <h3>Event info</h3>
+      <h2>Event info</h2>
       <form class="form-horizontal" role="form">
+        
         <div class="form-group">
-          <label class="col-lg-3 control-label">Upload gpx File</label>
+          <label class="col-lg-3 control-label">Upload GPX file</label>
           <div class="col-lg-8">
-              <input type="file" name="gpxFile" ng2FileSelect [uploader]="uploader">
+          <input type="file" name="file" ng2FileSelect [uploader]="uploader" />
           </div>
         </div>
+
 
         <div class="form-group">
           <label class="col-lg-3 control-label">Event name:</label>
@@ -21,9 +23,8 @@
 
         <div class="form-group">
           <label class="col-lg-3 control-label">Town:</label>
-          <div class="col-lg-8"id="locationField">
+          <div class="col-lg-8" >
             <input class="form-control" value="" name ="town" [(ngModel)]="formEvent.town" type="text">
-
           </div>
         </div>
 
