--- a/client/src/app/login-sing-in/login-sing-in.component.css
+++ b/client/src/app/login-sing-in/login-sing-in.component.css
@@ -3,6 +3,7 @@
 html {
     width: 100%;
     height: 100%;
+    background-image: url("http://redkiteprayer.com/wp-content/uploads/2014/05/PIC452175673.jpg");
 }
 
 body {
@@ -13,8 +14,8 @@ body {
 .container-background{
   width: 100%;
   height: 100%;
-  background-color:red;
-background-image: url(../../assets/race1.jpg);
+
+background-image: url("http://redkiteprayer.com/wp-content/uploads/2014/05/PIC452175673.jpg");
 }
 
 .container {
