--- a/client/src/app/profile/profile.component.css
+++ b/client/src/app/profile/profile.component.css
@@ -8,7 +8,9 @@
   color:white;
 }
 .profile img{
-  border-radius: 20%
+  border-radius: 30%;
+  width:120px;
+  height:120px;
 }
 .profile a{
 color:white;
@@ -17,6 +19,13 @@ color:white;
     border-style: none;
     text-align:center;
 
+}
+.btn-submit{
+
+  margin-top: 10%;
+  width:130px;
+  height: 30px;
+  color:#0D7377;
 }
 .panel-default{
   background-color: #0D7377;
@@ -28,8 +37,8 @@ background-color: #0D7377;
 }
 .media-body{
 background-color: #0D7377;
-
-  line-height:0.5em;
+line-height:0.5em;
+text-align: center;
 }
 .btn , .btn-link{
 line-height:0.5em;
