--- a/client/src/app/upload-gpxfile/upload-gpxfile.component.html
+++ b/client/src/app/upload-gpxfile/upload-gpxfile.component.html
@@ -1,19 +1,10 @@
 
-<form>
-  <fieldset>
+<form >
+  <fieldset class="upload-file">
     <legend> Phone info </legend>
 
     <label> Name* </label>
-    <input type="text" [(ngModel)]="newPhone.name" name="name" required />
-
-    <label> Specs </label>
-    <input type="text" #spec />
-    <button (click)="addSpec(spec.value); spec.value = ''"> add </button>
-
-    <ul>
-      <li *ngFor="let spec of newPhone.specs"> {{ spec }} </li>
-    </ul>
-    <small *ngIf="!newPhone.specs.length"> This phone has no specs :( </small>
+    <input type="text" [(ngModel)]="file.name" name="name" required />
 
     <input type="file" name="file" ng2FileSelect [uploader]="uploader" />
 
